--- a/navbar/src/styles/app.scss
+++ b/navbar/src/styles/app.scss
@@ -52,7 +52,7 @@
 
     height: 70px;
     padding: 0 1.375rem;
-    width: calc(100% - 46px);
+    width: calc(100% - 44px);
     border-radius: 16px;
 
     .navbar-container {
